<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:columnCount="2"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0" >
        </RelativeLayout>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="4"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_row="5"
            android:text="@string/login" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="252dp"
            android:layout_height="426dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="2"
            android:maxHeight="100dp"
            android:src="@drawable/hoco_logo" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_row="2"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <requestFocus />
        </TextView>

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|bottom"
            android:layout_row="2"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="21dp"
            android:layout_row="4"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <Space
            android:layout_width="119dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="201dp"
            android:layout_column="1"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_height="58dp"
            android:layout_column="0"
            android:layout_row="4" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_width="100dp"
            android:layout_row="1" />

        <Space
            android:layout_width="100dp"
            android:layout_row="3" />
    </GridLayout>

</ScrollView>